infra/k8s/comments-depl.yaml
# The deployment is inside another pool apps/v1
# hence we need to use that version.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # Number of pods we want to create.
  replicas: 1
  # Take a look at all the different pods, and find ones
  # with a label of 'app: posts'. Those are the ones 
  # this deployment should manage. 
  selector:
    matchLabels:
      app: comments
  # These can be thought of as the metadata/spec of a Pod.
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: abunvi97/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  # If we don't specify this, K8s still defaults to ClusterIP.
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
