infra/k8s/moderation-depl.yaml
# The deployment is inside another pool apps/v1
# hence we need to use that version.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # Number of pods we want to create.
  replicas: 1
  # Take a look at all the different pods, and find ones
  # with a label of 'app: posts'. Those are the ones 
  # this deployment should manage. 
  selector:
    matchLabels:
      app: moderation
  # These can be thought of as the metadata/spec of a Pod.
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: abunvi97/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  # If we don't specify this, K8s still defaults to ClusterIP.
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
