infra/k8s/posts-depl.yaml
# The deployment is inside another pool apps/v1
# hence we need to use that version.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  # Number of pods we want to create.
  replicas: 1
  # Take a look at all the different pods, and find ones
  # with a label of 'app: posts'. Those are the ones 
  # this deployment should manage. 
  selector:
    matchLabels:
      app: posts
  # These can be thought of as the metadata/spec of a Pod.
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: abunvi97/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  # If we don't specify this, K8s still defaults to ClusterIP.
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
