infra/k8s/query-depl.yaml
# The deployment is inside another pool apps/v1
# hence we need to use that version.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # Number of pods we want to create.
  replicas: 1
  # Take a look at all the different pods, and find ones
  # with a label of 'app: posts'. Those are the ones 
  # this deployment should manage. 
  selector:
    matchLabels:
      app: query
  # These can be thought of as the metadata/spec of a Pod.
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: abunvi97/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  # If we don't specify this, K8s still defaults to ClusterIP.
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
